# pbl

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  pb-data.json  pbr-data.json  pbr-template.mustache
.github/workflows/: publish.yml
data/: simple.json
src/: main.rs
src/model/: ci_cd.rs  issue_tracker.rs  link.rs  merge_requirements.rs  mod.rs  person.rs  project.rs  team.rs
templates/: simple.mustache
