[package]
name = "pbl"
version = "0.1.2"
description = "A simple command line publisher using data files and mustache templates."
authors = ["shane <shane@digitalsanctum.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/digitalsanctum/pbl"
exclude = [
    "*.json",
    "*.mustache"
]
keywords = ["cli", "mustache", "publisher", "template"]
categories = ["command-line-utilities", "command-line-interface", "rendering", "parsing", "template-engine"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "2.33.1"
ramhorns = "0.10.2"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.56"
