[package]
name = "pbl"
version = "1.0.0"
description = "A simple command line application for rendering templates from structured data and a template."
authors = ["Shane Witbeck <shane@digitalsanctum.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/digitalsanctum/pbl"
repository = "https://github.com/digitalsanctum/pbl"
exclude = [
    "*.json",
    "*.mustache"
]
keywords = ["cli", "mustache", "publisher", "template"]
categories = ["command-line-utilities", "command-line-interface", "rendering", "parsing", "template-engine"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3", features = ["derive", "env"] }
mustache = "0.9.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = "0.4"
